cleaned up the code

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div><img src="knob.jpg" alt=" round white knob that can be twisted"></div>
             <div class="buttonMenu">
                 <button onClick="setGrid()">Grid</button>
-                <button class="pushed" onClick="shade()">Shade</button>
-                <button class="pushed" onClick="color()">Colors</button>
-                <button onClick="reset()">Reset</button>
+                <button class="pushed" onClick="shadeFlip()">Shade</button>
+                <button class="pushed" onClick="colorFlip()">Colors</button>
+                <button onClick="generateGrid()">Reset</button>
             </div>
             <div><img src="knob.jpg" alt="round white knob that can be twisted"></div>
 
